# eVIL-UART-VCU-Port-Map

./: .gitignore  README.md  UARTVCUPortMap.py  generateExecutable.py  list_ports_windows_patched_from_pyserial_3_5.py  pyproject.toml  requirements.txt  setup.cfg  taskfile.yml  testPortmap.py
.devcontainer/: devcontainer.json
